# vertigo

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  RaveDeps.py  aclocal.m4  config.h.in  configure  configure.ac  create_python  my-configure  tarball_exclusions  test.py  upload.sh  vertigo.i
Analysis/: Makefile.am  SConscript
Analysis/Observer/interface/: Observer.h  ObserverBuilder.h  ObserverManager.h
Analysis/Observer/skel/: Skeleton.cc  Skeleton.h
Analysis/Observer/src/: Observer.cc  ObserverManager.cc
Analysis/Score/interface/: Score.h  SimpleScore.h
Analysis/Score/src/: SimpleScore.cc
Analysis/Tools/interface/: CalibrationMerger.h
Analysis/Tools/src/: CalibrationMerger.cc
Environment/: Makefile.am  SConscript
Environment/Configuration/interface/: ConfigurationSetter.h  SimpleConfigurable.h  SimpleConfiguration.h  VMultiType.h
Environment/Configuration/src/: ConfigurationSetter.cc  SimpleConfiguration.cc  VMultiType.cc
Environment/Configuration/test/: SConstruct
Environment/MCObjects/: BuildFile  PDGCodes.cc
Environment/MCObjects/interface/: AssociationManager.h  BasicSimParticle.h  BasicSimTrack.h  BasicSimVertex.h  PDGCodes.h  SimParticle.h  SimTrack.h  SimVertex.h
Environment/MCObjects/src/: AssociationManager.cc  BasicSimParticle.cc  BasicSimTrack.cc  BasicSimVertex.cc  PDGCodes.cc  SimParticle.cc  SimTrack.cc  SimVertex.cc
Environment/Utilities/interface/: Console.h  VertigoStreamers.h
Environment/Utilities/src/: Console.cc  VertigoStreamers.cc
Environment/VertigoObjects/interface/: VertigoJet.h
Environment/VertigoObjects/src/: VertigoJet.cc
Plugins/: Makefile.am
Plugins/BTagAnalyser/: Makefile.am
Plugins/BTagAnalyser/interface/: BTagAnalyser.h
Plugins/BTagAnalyser/src/: BTagAnalyser.cc
Plugins/BTagPrinter/: Makefile.am
Plugins/BTagPrinter/interface/: BTagPrinter.h
Plugins/BTagPrinter/src/: BTagPrinter.cc
Plugins/CmsEventGenerator/: Makefile.am
Plugins/CmsEventGenerator/interface/: CmsBeamSpotBuilder.h  CmsEventGenerator.h  SecondaryVertexTagInfoPrinter.h
Plugins/CmsEventGenerator/src/: CmsBeamSpotBuilder.cc  CmsEventGenerator.cc  SecondaryVertexTagInfoPrinter.cc
Plugins/CmsEventGenerator/test/: Makefile  one.root
Plugins/EventHistogrammer/: Makefile.am
Plugins/EventHistogrammer/interface/: EventHistogrammer.h
Plugins/EventHistogrammer/src/: EventHistogrammer.cc
Plugins/EventPrinter/: Makefile.am
Plugins/EventPrinter/interface/: EventPrinter.h  ObjectPrinter.h
Plugins/EventPrinter/src/: EventPrinter.cc  ObjectPrinter.cc
Plugins/EventWriter/: Makefile.am
Plugins/EventWriter/interface/: EventWriter.h  RaveObjectWriter.h
Plugins/EventWriter/src/: EventWriter.cc  RaveObjectWriter.cc
Plugins/FindingObserver/: Makefile.am
Plugins/FindingObserver/interface/: FindingObserver.h
Plugins/FindingObserver/src/: FindingObserver.cc
Plugins/FitterTournament/: Makefile.am
Plugins/FitterTournament/interface/: FitterTournament.h
Plugins/FitterTournament/src/: FitterTournament.cc
Plugins/HarvesterEventGenerator/: Makefile.am
Plugins/HarvesterEventGenerator/interface/: DelphiToRaveObjects.h  HarvesterEventGenerator.h  VertigoObjectReader.h
Plugins/HarvesterEventGenerator/src/: DelphiToRaveObjects.cc  HarvesterEventGenerator.cc  VertigoObjectReader.cc
Plugins/HepMCEventGenerator/: Makefile.am
Plugins/HepMCEventGenerator/interface/: HepMCEventGenerator.h  initPythia.h
Plugins/HepMCEventGenerator/src/: HepMCEventGenerator.cc  initPythia.cc
Plugins/HepMCEventGenerator/test/: test.py
Plugins/KinematicsObserver/: Makefile.am
Plugins/KinematicsObserver/interface/: KinematicsObserver.h
Plugins/KinematicsObserver/src/: KinematicsObserver.cc
Plugins/LHEEventGenerator/: Makefile.am
Plugins/LHEEventGenerator/interface/: LHEEventGenerator.h  LHEF.h
Plugins/LHEEventGenerator/src/: LHEEventGenerator.cc
Plugins/LHEEventGenerator/test/: run.sh
Plugins/LHEObserver/: Makefile.am
Plugins/LHEObserver/interface/: LHEObserver.h
Plugins/LHEObserver/src/: LHEObserver.cc
Plugins/LHEObserver/test/: Makefile  test.lhe
Plugins/LcioEventGenerator/: Makefile.am
Plugins/LcioEventGenerator/interface/: BrahmsLcioToRaveObjects.h  L3LcioToVertigoObjects.h  L3TrackChecker.h  LcioEventGenerator.h
Plugins/LcioEventGenerator/src/: BrahmsLcioToRaveObjects.cc  L3LcioToVertigoObjects.cc  L3TrackChecker.cc  LcioEventGenerator.cc
Plugins/LcioWriter/: Makefile.am
Plugins/LcioWriter/interface/: LcioWriter.h  VertigoToL3LcioObjects.h
Plugins/LcioWriter/src/: LcioWriter.cc  VertigoToL3LcioObjects.cc
Plugins/ListEventGenerator/: Makefile.am
Plugins/ListEventGenerator/interface/: ListEventGenerator.h
Plugins/ListEventGenerator/sample/: short.txt
Plugins/ListEventGenerator/src/: ListEventGenerator.cc
Plugins/MagneticFieldWriter/: Makefile.am
Plugins/ObjectCoder/: Makefile.am
Plugins/ParameterScanner/: Makefile.am
Plugins/ParticleDecayPrinter/: Makefile.am
Plugins/TestAnalyser/: Makefile.am
Plugins/TrackParameterHistogrammer/: Makefile.am
Plugins/VertexGun/: Makefile.am
Plugins/VertexHistogrammer/: Makefile.am
Plugins/Visualiser/: Makefile.am
Skins/: Makefile.am
Skins/Belle2Skin/: Makefile.am
Skins/BelleSkin/: Makefile.am
Skins/CMSSkin/: Makefile.am
Skins/DummySkin/: Makefile.am
Skins/ILDSkin/: Makefile.am
Skins/SHiPSkin/: Makefile.am
Vertigo/: Makefile.am  SConscript
Vertigo/main/: Version.cc  Version.h  main.cpp  sigsegv.c
VertigoHarvest/: BuildFile  Makefile.am
VertigoHarvest/interface/: EventToTuple.h  HarvesterConfigurationSetter.h  ObserverTuples.h  ParameterSetWriter.h  VertexHisto.h  VertigoHarvest.h
VertigoHarvest/src/: EventToTuple.cc  HarvesterConfigurationSetter.cc  ObserverTuples.cc  ParameterSetWriter.cc  VertexHisto.cc  VertigoHarvest.cc
VertigoHarvest/test/: HarvestTest.cpp  SConscript
cpp_application/: Makefile.am  input1.txt  propagatorTest.cc
python/: Makefile.am  __init__.py  tag.py
tools/: Makefile.am
tools/interface/: BayesianUpperLimit.h  LHEHelpers.h  XSection.h
tools/src/: BayesianUpperLimit.cc  LHEHelpers.cc  XSection.cc
(+323 files in other folders)
