AM_CPPFLAGS = -I$(top_srcdir) $(RAVE_CFLAGS)  $(BOOST_CPPFLAGS)

lib_LTLIBRARIES = libVertigoEnvironment.la

libVertigoEnvironment_la_SOURCES = \
	Configuration/interface/SimpleConfigurable.h \
	Configuration/interface/ConfigurationSetter.h \
	Configuration/interface/SimpleConfiguration.h \
	Configuration/interface/VMultiType.h \
	Configuration/src/ConfigurationSetter.cc \
	Configuration/src/SimpleConfiguration.cc \
	Configuration/src/VMultiType.cc \
	VertigoObjects/interface/VertigoJet.h \
	VertigoObjects/src/VertigoJet.cc \
	MCObjects/interface/SimTrack.h \
	MCObjects/interface/BasicSimTrack.h \
	MCObjects/interface/SimVertex.h \
	MCObjects/interface/AssociationManager.h \
	MCObjects/interface/BasicSimVertex.h \
	MCObjects/interface/BasicSimParticle.h \
	MCObjects/interface/SimParticle.h \
	MCObjects/interface/PDGCodes.h \
	MCObjects/src/SimTrack.cc \
	MCObjects/src/BasicSimTrack.cc \
	MCObjects/src/SimVertex.cc \
	MCObjects/src/AssociationManager.cc \
	MCObjects/src/BasicSimVertex.cc \
	MCObjects/src/BasicSimParticle.cc \
	MCObjects/src/SimParticle.cc \
	MCObjects/src/PDGCodes.cc \
	Utilities/interface/Console.h \
	Utilities/interface/VertigoStreamers.h \
	Utilities/src/Console.cc \
	Utilities/src/VertigoStreamers.cc 
